# cmpt-373-social-gaming

./: CMakeLists.txt  README.md  boost_temp_disable.patch  demo.cpp  ranges.patch  webgame.html
games/: rockpaper.json
lib/: CMakeLists.txt
lib/ambassador/: Ambassador 2.cpp  Ambassador.cpp  Ambassador.h  CMakeLists.txt
lib/ambassador/tests/: Ambassador_test.cpp
lib/eventLoop/: CMakeLists.txt  EventLoop.cpp
lib/gameInstanceManager/: CMakeLists.txt  gameinstancemanager.cpp
lib/gameInstanceManager/include/: gameinstancemanager.h
lib/mockServer/: CMakeLists.txt  mockAnswer.cpp  mockServerTest.cpp
lib/networking/: CMakeLists.txt
lib/networking/include/: Client.h  Server.h
lib/networking/src/: Client.cpp  Server.cpp
lib/nlohmann/: CMakeLists.txt
lib/setupGameSetting/: CMakeLists.txt  SetupGameSetting.cpp
lib/setupGameSetting/include/: SetupGameSetting.h
lib/taskFactory/: CMakeLists.txt  MockClasses.hpp  README.md  SocialGamingTaskFactory.cpp  SocialGamingTaskFactory.hpp  TaskFactory.hpp
lib/taskFactory/tests/: Factory_test.cpp
lib/variables/: CMakeLists.txt  EnvironmentMgr.cpp  EnvironmentMgr.hpp  README.md  Variables.cpp  Variables.hpp
lib/variables/tests/: EnvMgr_test.cpp  Variables_test.cpp
src/: CMakeLists.txt  Message.cpp  RuleInterpreter.cpp  controlflow.cpp  gameinstance.cpp  main.cpp
src/include/: Message.h  RuleInterpreter.h  Task.h  controlflow.hpp  gameinstance.h
src/tests/: CMakeLists.txt  controlflow_test.cpp
test/: CMakeLists.txt  RuleInterpreter.cpp  gameinstance_test.cpp
tools/: CMakeLists.txt
tools/client/: CMakeLists.txt  gameclient.cpp
tools/server/: CMakeLists.txt  gameserver.cpp
