add_subdirectory(setupGameSetting)
add_subdirectory(gameInstanceManager)
add_subdirectory(eventLoop)
if(NOT APPLE)
    add_subdirectory(nlohmann)
ELSE()
    include_directories(nlohmann)
ENDIF()
add_subdirectory(ambassador)
add_subdirectory(mockServer)
add_subdirectory(networking)
add_subdirectory(taskFactory)
add_subdirectory(variables)